package com.spaghetticodegang.trylater.contact;

public enum ContactStatus {
    PENDING,
    ACCEPTED,
    BLOCKED
}
