@startuml
skinparam classAttributeIconSize 0
hide empty members

enum ContactStatus {
    PENDING
    ACCEPTED
    BLOCKED
}
class Contact {
    - id : Long
    - requester : User
    - receiver : User
    - requestDate : LocalDateTime
    - acceptDate : LocalDateTime
    - status : ContactStatus
    + constructor()
    + getter()
    + setter()
}
interface ContactRepository {
    - contacts : Set<Contact>
    + findAllByRequesterOrReceiverAndContactStatus(user : User) : Set<Contact>
    + findContactById(contactId : Long) : Contact
    + save(contact : Contact)
    + update(contact : Contact)
    + delete(contact : Contact)
}
class ContactService {
    - contactRepository : ContactRepository
    + getContactsByStatus(user : User, contactStatus : ContactStatus)
    + getContactById(contactId : Long)
    + createContact(user : User, receiverId : Long)
    + updateContactStatus(user : User, contactStatus : ContactStatus)
    + deleteContact(contactId : Long)
}
class ContactController {
    - contactService : ContactService
    + GET /api/contact() <<secured>>
    + GET /api/contact/{id}() <<secured>>
    + POST /api/contact() <<secured>>
    + PATCH /api/contact/{id}() <<secured>>
    + DELETE /api/contact/{id}() <<secured>>
}

Contact "0..*" --* "1" User
Contact ..> ContactStatus : <<use>>
ContactRepository --> Contact
ContactService --> ContactRepository
ContactController --> ContactService

@enduml